@@ -35,7 +35,9 @@ Constructor. Use \helpref{wxTextEntryDialog::ShowModal}{wxtextentrydialogshowmod
 
 \docparam{defaultValue}{The default value, which may be the empty string.}
 
-\docparam{style}{A dialog style, specifying the buttons (wxOK, wxCANCEL) and an optional wxCENTRE style.}
+\docparam{style}{A dialog style, specifying the buttons (wxOK, wxCANCEL)
+and an optional wxCENTRE style. Additionally, wxTextCtrl styles (such as
+{\tt wxTE\_PASSWORD} may be specified here.}
 
 \docparam{pos}{Dialog position.}
 
